# bob-skills-installer

./: LICENSE  MANIFEST.in  README.md  requirements.txt
bob-skills-installer-main-2/: pyproject.toml  setup.py
bob-skills-installer-main-2/bob_installer/: __init__.py  cli.py  installer.py
bob_installer/: config.py
